--- a/geothermalsite/dashboard/static/generalSiteStyles.css
+++ b/geothermalsite/dashboard/static/generalSiteStyles.css
@@ -1,9 +1,10 @@
 /* This files contains custom colors and styles we choose for our website's design. */
 
 body {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: "Montserrat";
     font-size: 14px;
     color: #32292F;
+    background-color: #faf3dd;
   }
 
 .black-background {
