--- a/geothermalsite/dashboard/static/generalSiteStyles.css
+++ b/geothermalsite/dashboard/static/generalSiteStyles.css
@@ -1,32 +1,41 @@
 /* This files contains custom colors and styles we choose for our website's design. */
 
+:root {
+    --custom-black: #32292F;
+    --custom-cream: #faf3dd;
+    --custom-brown: #A3693F;
+    --custom-green: #648767;
+    --custom-pink: #CFA5B4;
+    --custom-dark-cream: #F3E3B1;
+}
+
 body {
+    font-size: 24px;
     font-family: "Montserrat";
-    font-size: 14px;
-    color: #32292F;
-    background-color: #faf3dd;
-  }
+    color: var(--custom-black);
+    background-color: var(--custom-cream);
+}
 
 .black-background {
-    background-color: #32292F;
+    background-color: var(--custom-black);
 }
 
 .pink-background {
-    background-color: #CFA5B4;
+    background-color: var(--custom-pink);
 }
 
 .brown-background {
-    background-color: #A3693F;
+    background-color: var(--custom-brown);
 }
 
 .dark-cream-background {
-    background-color: #F3E3B1;
+    background-color: var(--custom-dark-cream);
 }
 
 .cream-background {
-    background-color: #faf3dd;
+    background-color: var(--custom-cream);
 }
 
 .green-background {
-    background-color: #648767;
+    background-color: var(--custom-green);
 }
