change back to top button color

--- a/geothermalsite/dashboard/templates/dashboard/back_to_top_button.html
+++ b/geothermalsite/dashboard/templates/dashboard/back_to_top_button.html
@@ -1,9 +1,9 @@
 {% load static %}
-
+<link rel="stylesheet" href="{% static 'generalSiteStyles.css' %}"/>
 <link rel="stylesheet" href="{% static 'back_to_top_button.css' %}">
 <script src="{% static 'back_to_top_button.js' %}"></script>
 
 <!-- Back to top button -->
-<button type="button" class="d-flex justify-content-center align-items-center btn btn-danger btn-floating btn-lg" id="btn-back-to-top">
-    <i class="fas fa-arrow-up"></i>
+<button type="button" class="d-flex justify-content-center align-items-center btn green-background btn-floating btn-lg" id="btn-back-to-top">
+    <i class="fas fa-arrow-up" style="color:white;"></i>
 </button>
