Added remote tracking to about page

--- a/geothermalsite/dashboard/templates/dashboard/base.html
+++ b/geothermalsite/dashboard/templates/dashboard/base.html
@@ -7,8 +7,8 @@
 
         <!-- Include custom images, css, and js in the static directory -->
         {% load static %}
-        <!-- Include the Carleton logo as the favicon image of the website's browser tab-->
-        <link rel="icon" type="image/x-icon" href="static/Carleton_Simplified C-Ray_Blue.png">
+        <!-- Include the Carleton logo as the favicon image of the website's browser tab -->
+        <link rel="icon" type="image/c-logo" href="static/Carleton_Simplified C-Ray_Blue.png">
 
         <!-- Block to contain all CSS files, which can be overwritten/extended in child templates -->
         {% block css %}
