--- a/geothermalsite/dashboard/templates/dashboard/footer.html
+++ b/geothermalsite/dashboard/templates/dashboard/footer.html
@@ -21,13 +21,13 @@
 
           <ul class="list-unstyled mb-0">
             <li>
-              <a href="#!" class="text-dark">Dashboard</a>
+              <a href="{% url 'index' %}" class="text-dark">Dashboard</a>
             </li>
             <li>
-              <a href="#!" class="text-dark">About</a>
+              <a href="{% url 'about' %}" class="text-dark">About</a>
             </li>
             <li>
-              <a href="#!" class="text-dark">Documentation</a>
+              <a href="{% url 'documentation' %}" class="text-dark">Documentation</a>
             </li>
           </ul>
         </div>
@@ -39,7 +39,7 @@
 
           <ul class="list-unstyled">
             <li>
-              <a href="#!" class="text-dark">Home</a>
+              <a href="{% url 'index' %}" class="text-dark">Home</a>
             </li>
             <li>
               <a href="{% url 'index' %}" class="text-dark">Geothermal</a>
