--- a/geothermalsite/dashboard/templates/dashboard/stratigraphy.html
+++ b/geothermalsite/dashboard/templates/dashboard/stratigraphy.html
@@ -20,9 +20,11 @@
 {% endblock %}
 
 {% block content %}
-    <h1>Stratigraphy</h1>
-    {% comment %} <button type="button" onclick="window.location.href='/'">Home</button> {% endcomment %}
+    <div class ="part-hide">
+        {% include 'dashboard/jumbotron.html' %}
 
+        {% comment %} {% include 'dashboard/querycards.html' %} {% endcomment %}
+    </div>
     {% if queryData %}
     <details>
         <summary>See Data</summary>
@@ -42,7 +44,7 @@
 
     {% load static %}
 
-    <script src="{% static 'tempVsDepthGraph.js' %}" type="module"></script>
+    <script src="{% static 'stratigraphyGraph.js' %}" type="module"></script>
     <script>
         var queryData = {{ queryData | safe }};
         var graphData = {{ graphData | safe }};
@@ -54,7 +56,7 @@
 
     {% endif %}
 
-    <div class="form-container">
+    <div class="form-container" id="stratigraphy-form">
         <div class="row">
             <div class="col-md-8 offset-md-2">
                 <form action="/stratigraphy/" method="post">
@@ -103,7 +105,7 @@
                             });
                     </script>
                     <div>
-                        <input type="submit" value="Submit" class="btn btn-primary">
+                        <button type="submit" id="submit" value="Submit" class="btn btn-primary">Submit</button>
                     </div>
                 </form>
             </div>
