clean up FAQ section

--- a/geothermalsite/dashboard/static/generalSiteStyles.css
+++ b/geothermalsite/dashboard/static/generalSiteStyles.css
@@ -1,4 +1,4 @@
-/* This files contains custom colors and styles we choose for our website's design. */
+/* This files contains custom colors and styles we chose for our website's design. */
 
 /* Define variables for our custom color palette */
 :root {
