--- a/geothermalsite/dashboard/templates/dashboard/documentation.html
+++ b/geothermalsite/dashboard/templates/dashboard/documentation.html
@@ -1,11 +1,9 @@
 {% extends 'dashboard/base.html' %} {% load static %}
 <link rel="stylesheet" href="{% static 'documentation.css' %}" />
 
-{% block header %}
-<h1>Documentation</h1>
-{% endblock %}
-
 {% block content %}
+<h1 class="header">Documentation</h1>
+
 <div class="container">
   <div class="row">
     <div class="col-3">
@@ -57,11 +55,11 @@
               data-parent="#accordion"
             >
               <div class="card-body">
-                <em
+                <strong
                   >You can query the temperature of one or multiple boreholes
-                  with respect to depth over a period of time.</em
+                  with respect to depth over a period of time.</strong
                 >
-                <br />
+                <br /> <br />
                 You can customize this range of time, or choose the most recent
                 7 days, 30 days, or year's worth of data. You can adjust the
                 time point of the temperature collection to be at midnight,
@@ -93,11 +91,11 @@
               data-parent="#accordion"
             >
               <div class="card-body">
-                <em
+                <strong
                   >Time ranges that fall within a data outage cannot be
-                  queried.</em
+                  queried.</strong
                 >
-                <br />
+                <br /> <br />
                 Try selecting a new custom date range instead, or choose the
                 most recent available data range. To learn more about data
                 outages, please visit the Data Outages section in the Data
@@ -127,8 +125,8 @@
               data-parent="#accordion"
             >
               <div class="card-body">
-                <em>Invalid data will not appear in query visualizations.</em>
-                <br />
+                <strong>Invalid data will not appear in query visualizations.</strong>
+                <br /> <br />
                 If you selected a time range that included a data outage, this
                 will be reflected in the visualization that is generated. The
                 gap in the graph represents the period of time over which a data
@@ -159,18 +157,19 @@
               data-parent="#accordion"
             >
               <div class="card-body">
-                <em
+                <strong
                   >The data you are querying originates from the 5 borehole
                   loops in the Bald Spot that are equipped with fiber optic
-                  cables.</em
+                  cables.</strong
                 >
-                <br />
+                <br /> <br />
                 For a more in-depth overview of the data pipeline, visit the
                 <a href="{% url 'about' %}">about page</a>.
               </div>
             </div>
           </div>
         </div>
+        <br />
         <!-- end FAQ accordion -->
 
         <!-- Data summary section -->
