--- a/geothermalsite/dashboard/templates/dashboard/jumbotron.html
+++ b/geothermalsite/dashboard/templates/dashboard/jumbotron.html
@@ -3,8 +3,8 @@
 <link rel="stylesheet" href="{% static 'generalSiteStyles.css' %}">
 
 <div class="jumbotron cream-background">
-    <h1 class="display-4">Welcome to the Carleton Geothermal Dashboard!</h1>
-    <p class="lead">Created by the Geothermal CS Comps Team, 2022-23</p>
+    <h1 class="display-4">Welcome to GeoDE!</h1>
+    <p class="lead">A Carleton Geothermal Data Explorer developed by the Geothermal CS Comps Team, 2022-23</p>
     <hr class="my-4">
     <h2 class="text-muted">Disclaimers</h2>
     <p>One of the difficulties (and joys!) of working with Carleton's Geothermal data is its size and complexity. Here are a few things to know:</p>
