--- a/geothermalsite/dashboard/templates/dashboard/navbar.html
+++ b/geothermalsite/dashboard/templates/dashboard/navbar.html
@@ -4,7 +4,7 @@
 <!-- Bootstrap 4 Navbar: https://getbootstrap.com/docs/4.0/components/navbar/ -->
 <nav class="navbar navbar-expand-lg bg-body-tertiary cream-background">
     <div class="container-fluid">
-      <a class="navbar-brand mb-0 h1" href="{% url 'index' %}">Carleton Geothermal Dashboard</a>
+      <a class="navbar-brand mb-0 h1 font-weight-bold" href="{% url 'index' %}">Carleton GeoDE</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
