--- a/geothermalsite/dashboard/templates/dashboard/index.html
+++ b/geothermalsite/dashboard/templates/dashboard/index.html
@@ -15,7 +15,7 @@
                     {# Django requires this token statement #}
                     {% csrf_token %}
 
-                    {{ form.as_p }}
+                    {{ form }}
                     <script type="text/javascript">
                         $(function() {
 
