stratigraphy graph color gradient

--- a/geothermalsite/dashboard/templates/dashboard/stratigraphy.html
+++ b/geothermalsite/dashboard/templates/dashboard/stratigraphy.html
@@ -96,7 +96,7 @@
                     timePickerIncrement: 1,
                     timePickerSeconds: false,
                     locale: {
-                        format: 'HH:mm'
+                        format: 'hh:mm A'
                     }
                 }).on('show.daterangepicker', function (ev, picker) {
                     picker.container.find(".calendar-table").hide();
