--- a/geothermalsite/dashboard/templates/dashboard/documentation.html
+++ b/geothermalsite/dashboard/templates/dashboard/documentation.html
@@ -1,14 +1,19 @@
 {% extends 'dashboard/base.html' %} {% load static %}
-<link rel="stylesheet" href="{% static 'documentation.css' %}" />
+<link rel="stylesheet" href="{% static 'documentation.css' %}">
 
 {% block content %}
-<h1 class="header">Documentation</h1>
+<h1 class="header" style="padding-left: 5%;" id="documentation-header">Documentation</h1>
 
-<div class="container">
+<div class="container-fluid" style="padding-left: 5%;">
   <div class="row">
     <!-- Left-hand navbar for page contents -->
-    <div class="col-3 navbar-col">
-      <ul class="nav nav-tabs">
+    <div class="col-2 navbar-col">
+      <div id="list-example" class="list-group">
+        <a class="list-group-item list-group-item-action" href="#faq-section">FAQ</a>
+        <a class="list-group-item list-group-item-action" href="#data-summary-section">Data Summary</a>
+        <a class="list-group-item list-group-item-action" href="#advanced-api-section">Advanced API</a>
+      </div>
+      <!-- <ul class="nav nav-tabs">
         <li class="nav-item">
           <a class="nav-link active" href="#faq-section">FAQ</a>
         </li>
@@ -18,12 +23,13 @@
         <li class="nav-item">
           <a class="nav-link active" href="#advanced-api-section">Advanced API</a>
         </li>
-      </ul>
+      </ul>> -->
     </div>
     <!-- end navbar for page contents -->
 
     <!-- Right-hand page contents -->
     <div class="col-9">
+      <div data-spy="scroll" data-target="#list-example" data-offset="0" class="scrollspy-example"></div>
       <!-- FAQ as a Bootstrap 4 accordion-->
       <h4 id="faq-section">FAQ</h4>
       <div id="accordion">
@@ -204,9 +210,8 @@
         The Geothermal Data API supports making more advanced queries,
         including direct PostGreSQL queries. For more information on advanced
         API use,
-        <a href="https://github.com/acdalal/geothermal"
-          >visit our repository on GitHub</a
-        >
+        <u><a href="https://github.com/acdalal/geothermal"
+          >visit our repository on GitHub</a></u>
       </p>
     </div>
     <!-- end right-hand page contents -->
