--- a/geothermalsite/static/documentation.css
+++ b/geothermalsite/static/documentation.css
@@ -2,3 +2,11 @@
 .scrollspy-example {
     position: relative;
 }
+
+#documentation-header {
+    color: red;
+}
+
+.navbar .nav-item .active {
+    color:#648767!important;
+}
