Organized static files

--- a/geothermalsite/dashboard/templates/dashboard/about.html
+++ b/geothermalsite/dashboard/templates/dashboard/about.html
@@ -1,6 +1,6 @@
 {% extends 'dashboard/base.html' %}
 {% load static %}
-<link rel="stylesheet" href="{% static 'about.css' %}">
+<link rel="stylesheet" href="{% static 'css/about.css' %}">
 
 
 {% block content %}
