--- a/geothermalsite/dashboard/templates/dashboard/documentation.html
+++ b/geothermalsite/dashboard/templates/dashboard/documentation.html
@@ -1,5 +1,5 @@
 {% extends 'dashboard/base.html' %} {% load static %}
-<link rel="stylesheet" href="{% static 'documentation.css' %}">
+<link rel="stylesheet" href="{% static 'css/documentation.css' %}">
 
 {% block content %}
 <h1 class="header" style="padding-left: 5%;" id="documentation-header">Documentation</h1>
