--- a/geothermalsite/dashboard/templates/dashboard/footer.html
+++ b/geothermalsite/dashboard/templates/dashboard/footer.html
@@ -1,5 +1,5 @@
 {% load static %}
-<link rel="stylesheet" href="{% static 'generalSiteStyles.css' %}">
+<link rel="stylesheet" href="{% static 'css/generalSiteStyles.css' %}">
 
 <!-- Included inline styling to override navbar's !important-flaged background color CSS -->
 <footer class="bg-info text-left text-lg-start" style="background-color:#faf3dd!important;">
