--- a/geothermalsite/dashboard/templates/dashboard/jumbotron.html
+++ b/geothermalsite/dashboard/templates/dashboard/jumbotron.html
@@ -1,6 +1,6 @@
 <!-- NOTE: jumbotron is not supported in Bootstrap v5, but is in v4 -->
 {% load static %}
-<link rel="stylesheet" href="{% static 'generalSiteStyles.css' %}">
+<link rel="stylesheet" href="{% static 'css/generalSiteStyles.css' %}">
 
 <div class="jumbotron cream-background">
     <h1 class="display-4">Welcome to GeoDE!</h1>
