--- a/geothermalsite/dashboard/templates/dashboard/navbar.html
+++ b/geothermalsite/dashboard/templates/dashboard/navbar.html
@@ -1,5 +1,5 @@
 {% load static %}
-<link rel="stylesheet" href="{% static 'navbar.css' %}">
+<link rel="stylesheet" href="{% static 'css/navbar.css' %}">
 
 <!-- Bootstrap 4 Navbar: https://getbootstrap.com/docs/4.0/components/navbar/ -->
 <nav class="navbar navbar-expand-lg bg-body-tertiary cream-background">
@@ -20,7 +20,7 @@
 
         <div class="ml-auto">
           <a href="https://www.carleton.edu/" alt="Carleton College Blue Logo">
-            <img class="logo" src="{% static 'Carleton-Closed-C-Ray-Wordmark-Left-Blue.png' %}" width="125" height="22">
+            <img class="logo" src="{% static 'img/Carleton-Closed-C-Ray-Wordmark-Left-Blue.png' %}" width="125" height="22">
           </a>
         </div>
       </div>
