--- a/geothermalsite/dashboard/templates/dashboard/querycards.html
+++ b/geothermalsite/dashboard/templates/dashboard/querycards.html
@@ -4,7 +4,7 @@
     <!-- The cards currently have hard-coded widths and margins, and changing styles further may warrant a css file. -->
 
     <div class="card" style="width: 18rem; margin: 20px;">
-        <img class="card-img-top" src="{% static 'TempVsTime_example.png' %}" alt="TempVsTime visualization example">
+        <img class="card-img-top" src="{% static 'img/TempVsTime_example.png' %}" alt="TempVsTime visualization example">
         <div class="card-body">
             <p class="card-text">Build a query on the database showing temperature variation with respect to time.</p>
             <a href="{% url 'tempvstime' %}" class="btn btn-primary stretched-link">Temperature vs. Time</a>
@@ -12,7 +12,7 @@
     </div>
 
     <div class="card" style="width: 18rem; margin: 20px;">
-        <img class="card-img-top" src="{% static 'TempVsTime_example.png' %}" alt="TempVsDepth visualization example">
+        <img class="card-img-top" src="{% static 'img/TempVsTime_example.png' %}" alt="TempVsDepth visualization example">
         <div class="card-body">
             <p class="card-text">Build a query on the database showing temperature variation with respect to bolehole depth.</p>
             <a href="{% url 'tempvsdepth' %}" class="btn btn-primary stretched-link">Temperature vs. Depth</a>
@@ -20,7 +20,7 @@
     </div>
 
     <div class="card" style="width: 18rem; margin: 20px;">
-        <img class="card-img-top" src="{% static 'TempVsTime_example.png' %}" alt="TempVsDepth visualization example">
+        <img class="card-img-top" src="{% static 'img/TempVsTime_example.png' %}" alt="TempVsDepth visualization example">
         <div class="card-body">
             <p class="card-text">Build a query on the database showing temperature variation in the entire borehole over time.</p>
             <a href="{% url 'stratigraphy' %}" class="btn btn-primary stretched-link">Stratigraphy Graph</a>
