--- a/geothermalsite/dashboard/templates/dashboard/back_to_top_button.html
+++ b/geothermalsite/dashboard/templates/dashboard/back_to_top_button.html
@@ -1,7 +1,7 @@
 {% load static %}
-<link rel="stylesheet" href="{% static 'generalSiteStyles.css' %}"/>
-<link rel="stylesheet" href="{% static 'back_to_top_button.css' %}">
-<script src="{% static 'back_to_top_button.js' %}"></script>
+<link rel="stylesheet" href="{% static 'css/generalSiteStyles.css' %}"/>
+<link rel="stylesheet" href="{% static 'css/back_to_top_button.css' %}">
+<script src="{% static 'js/back_to_top_button.js' %}"></script>
 
 <!-- Back to top button -->
 <button type="button" class="d-flex justify-content-center align-items-center btn green-background btn-floating btn-lg" id="btn-back-to-top">
