--- a/geothermalsite/dashboard/templates/dashboard/base.html
+++ b/geothermalsite/dashboard/templates/dashboard/base.html
@@ -8,7 +8,7 @@
         <!-- Include custom images, css, and js in the static directory -->
         {% load static %}
         <!-- Include the Carleton logo as the favicon image of the website's browser tab -->
-        <link rel="icon" type="image/c-logo" href="static/Carleton_Simplified C-Ray_Blue.png">
+        <link rel="icon" type="image/c-logo" href="{% static 'img/Carleton_Simplified C-Ray_Blue.png' %}">
 
         <!-- Block to contain all CSS files, which can be overwritten/extended in child templates -->
         {% block css %}
@@ -26,7 +26,7 @@
             <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
 
             <!-- Custom site styles -->
-            <link rel="stylesheet" href="{% static 'generalSiteStyles.css' %}"/>
+            <link rel="stylesheet" href="{% static 'css/generalSiteStyles.css' %}"/>
         {% endblock %}
 
         <!-- Block to contain all JS files, which can be overwritten/extended in child templates -->
