dynamic form tabs attempt 1

--- a/geothermalsite/dashboard/templates/dashboard/index.html
+++ b/geothermalsite/dashboard/templates/dashboard/index.html
@@ -6,6 +6,9 @@
 
     {% include 'dashboard/querycards.html' %}
 
+    {% include 'dashboard/formtabs.html' %}
+
+
     <div class="form-container">
         <div class="row">
             <div class="col-md-8 offset-md-2">
