--- a/geothermalsite/dashboard/templates/dashboard/formtabs.html
+++ b/geothermalsite/dashboard/templates/dashboard/formtabs.html
@@ -13,8 +13,69 @@
     </li>
   </ul>
   <div class="tab-content" id="myTabContent">
+    <div class="form-container tab-pane fade show active">
+        <div class="row">
+            <div class="col-md-8 offset-md-2">
+                <form action="/stratigraphy/" method="post">
+                    <br>
+                    {% csrf_token %}
+                    {{ form }}
+                    {# This script enables the fancy datetime picker #}
 
-    <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">...</div>
+                    <script type="text/javascript">
+                        $(function() {
+                            var disabledRanges = [];
+                            {% for range in outageList %}
+                                disabledRanges.push({ start: '{{ range.startDate }}', end: '{{ range.endDate }}' });
+                            {% endfor %}
+                            $('#id_dateRange').daterangepicker({
+                                isInvalidDate: function(date) {
+                                    for (var i = 0; i < disabledRanges.length; i++) {
+                                        if (date >= moment(disabledRanges[i].start) && date <= moment(disabledRanges[i].end)) {
+                                            return true;
+                                        }
+                                    }
+                                    return false;
+                                },
+                                minDate: "{{ dataStartDate }}",
+                                maxDate: "{{ dataEndDate }}",
+                                ranges: {
+                                'Last 7 Available Days': [moment("{{ dataEndDate }}").subtract(6, 'days'), moment()],
+                                'Last 30 Available Days': [moment("{{ dataEndDate }}").subtract(29, 'days'), moment()],
+                                'Last 3 Available Months': [moment("{{ dataEndDate }}").subtract(3, 'months'), moment()],
+                                'Last Available Year': [moment("{{ dataEndDate }}").subtract(1, 'years'), moment()]
+                                },
+
+                            });
+                            });
+
+                            $('#id_timeSelector').daterangepicker({
+                                timePicker: true,
+                                singleDatePicker: true,
+                                timePickerIncrement: 1,
+                                timePickerSeconds: false,
+                                locale: {
+                                    format: 'hh:mm A'
+                                }
+                            }).on('show.daterangepicker', function (ev, picker) {
+                                picker.container.find(".calendar-table").hide();
+                            });
+                    </script>
+                    <script>
+                        $(document).ready(function() {
+                            $("button").click(function() {
+                                $(document).scrollTop($(document).height());
+                            });
+                        });
+                    </script>
+                    <div>
+                        <button type="submit" value="Submit" class="btn btn-primary">Submit</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+    <div class="tab-pane fade" id="home" role="tabpanel" aria-labelledby="home-tab">...</div>
     <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">...</div>
     <div class="tab-pane fade" id="contact" role="tabpanel" aria-labelledby="contact-tab">...</div>
   </div>
