dynamic form attempt kinda failed because it's too much trouble accessing multiple froms on the same page

--- a/geothermalsite/dashboard/templates/dashboard/index.html
+++ b/geothermalsite/dashboard/templates/dashboard/index.html
@@ -4,7 +4,7 @@
 
     {% include 'dashboard/jumbotron.html' %}
 
-    {% include 'dashboard/querycards.html' %}
+    {% comment %} {% include 'dashboard/querycards.html' %} {% endcomment %}
 
     {% include 'dashboard/formtabs.html' %}
 
