--- a/geothermalsite/dashboard/templates/dashboard/formtabs.html
+++ b/geothermalsite/dashboard/templates/dashboard/formtabs.html
@@ -1,34 +1,113 @@
+
 {% load static %}
 <link rel="stylesheet" href="{% static 'css/generalSiteStyles.css' %}">
+ <!-- Bootstrap JavaScript 4.0.0 -->
+ <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" crossorigin="anonymous"></script>
+
 
 <ul class="nav nav-tabs" id="myTab" role="tablist">
     <li class="nav-item">
-      <a class="nav-link active" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home" aria-selected="true">Home</a>
-    </li>
+        <a class="nav-link active" id="TemperatureProfile-tab" data-toggle="tab" href="#TemperatureProfile" role="tab" aria-controls="TemperatureProfile" aria-selected="true">Temperature Profile</a>
+      </li>
     <li class="nav-item">
-      <a class="nav-link" id="profile-tab" data-toggle="tab" href="#profile" role="tab" aria-controls="profile" aria-selected="false">Profile</a>
+      <a class="nav-link" id="TempVsTime-tab" data-toggle="tab" href="#TempVsTime" role="tab" aria-controls="TempVsTime" aria-selected="false">TempVsTime</a>
     </li>
     <li class="nav-item">
       <a class="nav-link" id="contact-tab" data-toggle="tab" href="#contact" role="tab" aria-controls="contact" aria-selected="false">Contact</a>
     </li>
   </ul>
   <div class="tab-content" id="myTabContent">
-    <div class="form-container tab-pane fade show active">
+    <div class="form-container tab-pane fade show active" id="TemperatureProfile" role="tabpanel" aria-labelledby="TemperatureProfile-tab">
         <div class="row">
             <div class="col-md-8 offset-md-2">
                 <form action="/stratigraphy/" method="post">
                     <br>
                     {% csrf_token %}
                     {{ form }}
+                    {% load static %}
+
                     {# This script enables the fancy datetime picker #}
+                    <script>
+                        $(function () {
+                            var disabledRanges = [];
+                            {% for range in outageList %}
+                                disabledRanges.push({ start: '{{ range.startDate }}', end: '{{ range.endDate }}' });
+                            {% endfor %}
+
+                            $('#id_dateRange').daterangepicker({
+                                isInvalidDate: function (date) {
+                                    for (var i = 0; i < disabledRanges.length; i++) {
+                                        if (date >= moment(disabledRanges[i].start) && date <= moment(disabledRanges[i].end)) {
+                                            return true;
+                                        }
+                                    }
+                                    return false;
+                                },
+                                minDate: "{{ dataStartDate }}",
+                                maxDate: "{{ dataEndDate }}",
+                                ranges: {
+                                    'Last 7 Available Days': [moment("{{ dataEndDate }}").subtract(6, 'days'), moment()],
+                                    'Last 30 Available Days': [moment("{{ dataEndDate }}").subtract(29, 'days'), moment()],
+                                    'Last 3 Available Months': [moment("{{ dataEndDate }}").subtract(3, 'months'), moment()],
+                                    'Last Available Year': [moment("{{ dataEndDate }}").subtract(1, 'years'), moment()]
+                                },
+
+                            });
+                        });
+
+                        $('#id_timeSelector').daterangepicker({
+                            timePicker: true,
+                            singleDatePicker: true,
+                            timePickerIncrement: 1,
+                            timePickerSeconds: false,
+                            locale: {
+                                format: 'hh:mm A'
+                            }
+                        }).on('show.daterangepicker', function (ev, picker) {
+                            picker.container.find(".calendar-table").hide();
+                        });
+                        $(document).ready(function () {
+                            $("button").click(function () {
+                                $(document).scrollTop($(document).height());
+                            });
+                        });
+                    </script>
+
+                    <div>
+                        <button type="submit" value="Submit" class="btn btn-primary">Submit</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+    {% comment %} <div class="tab-pane fade" id="home" role="tabpanel" aria-labelledby="home-tab">...</div> {% endcomment %}
+    <div class="form-container tab-pane fade" id="TempOverTime" role="tabpanel" aria-labelledby="TempOverTime-tab"><div class="form-container">
+        <div class="row">
+            <div class="col-md-8 offset-md-2">
+                <form action="/tempvstime/" method="post">
+                    <br>
+                    {# Django requires this token statement #}
+                    {% csrf_token %}
+
+                    {{ form }}
 
                     <script type="text/javascript">
                         $(function() {
+
+                            var start = moment().subtract(29, 'days');
+                            var end = moment();
+
+
+                            function cb(start, end) {
+                                $('#id_dateRange').html(start.format('MMMM D, YYYY') + ' - ' + end.format('MMMM D, YYYY'));
+                            }
+
                             var disabledRanges = [];
                             {% for range in outageList %}
                                 disabledRanges.push({ start: '{{ range.startDate }}', end: '{{ range.endDate }}' });
                             {% endfor %}
                             $('#id_dateRange').daterangepicker({
+
                                 isInvalidDate: function(date) {
                                     for (var i = 0; i < disabledRanges.length; i++) {
                                         if (date >= moment(disabledRanges[i].start) && date <= moment(disabledRanges[i].end)) {
@@ -46,28 +125,85 @@
                                 'Last Available Year': [moment("{{ dataEndDate }}").subtract(1, 'years'), moment()]
                                 },
 
-                            });
-                            });
+                            }, cb);
 
-                            $('#id_timeSelector').daterangepicker({
-                                timePicker: true,
-                                singleDatePicker: true,
-                                timePickerIncrement: 1,
-                                timePickerSeconds: false,
-                                locale: {
-                                    format: 'hh:mm A'
-                                }
-                            }).on('show.daterangepicker', function (ev, picker) {
-                                picker.container.find(".calendar-table").hide();
-                            });
+                            cb(start, end);
+
+                        });
                     </script>
+
+                    <div>
+                        <input type="submit" value="Submit" />
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
+    <div class="tab-pane fade" id="contact" role="tabpanel" aria-labelledby="contact-tab">...</div>
+</div>
+
+
+<select name="querySelection" id="querySelection">
+    <option value="TemperatureProfile">Temperature Profile</option>
+    <option value="TempVsTime">Temp vs Time</option>
+</select>
+    <div class="form-container" id="TemperatureProfile">
+        <div class="row">
+            <div class="col-md-8 offset-md-2">
+                <form action="/stratigraphy/" method="post">
+                    <br>
+                    {% csrf_token %}
+                    {{ form }}
+                    {% load static %}
+
+                    {# This script enables the fancy datetime picker #}
                     <script>
-                        $(document).ready(function() {
-                            $("button").click(function() {
+                        $(function () {
+                            var disabledRanges = [];
+                            {% for range in outageList %}
+                                disabledRanges.push({ start: '{{ range.startDate }}', end: '{{ range.endDate }}' });
+                            {% endfor %}
+
+                            $('#id_dateRange').daterangepicker({
+                                isInvalidDate: function (date) {
+                                    for (var i = 0; i < disabledRanges.length; i++) {
+                                        if (date >= moment(disabledRanges[i].start) && date <= moment(disabledRanges[i].end)) {
+                                            return true;
+                                        }
+                                    }
+                                    return false;
+                                },
+                                minDate: "{{ dataStartDate }}",
+                                maxDate: "{{ dataEndDate }}",
+                                ranges: {
+                                    'Last 7 Available Days': [moment("{{ dataEndDate }}").subtract(6, 'days'), moment()],
+                                    'Last 30 Available Days': [moment("{{ dataEndDate }}").subtract(29, 'days'), moment()],
+                                    'Last 3 Available Months': [moment("{{ dataEndDate }}").subtract(3, 'months'), moment()],
+                                    'Last Available Year': [moment("{{ dataEndDate }}").subtract(1, 'years'), moment()]
+                                },
+
+                            });
+                        });
+
+                        $('#id_timeSelector').daterangepicker({
+                            timePicker: true,
+                            singleDatePicker: true,
+                            timePickerIncrement: 1,
+                            timePickerSeconds: false,
+                            locale: {
+                                format: 'hh:mm A'
+                            }
+                        }).on('show.daterangepicker', function (ev, picker) {
+                            picker.container.find(".calendar-table").hide();
+                        });
+                        $(document).ready(function () {
+                            $("button").click(function () {
                                 $(document).scrollTop($(document).height());
                             });
                         });
                     </script>
+
                     <div>
                         <button type="submit" value="Submit" class="btn btn-primary">Submit</button>
                     </div>
@@ -75,7 +211,62 @@
             </div>
         </div>
     </div>
-    <div class="tab-pane fade" id="home" role="tabpanel" aria-labelledby="home-tab">...</div>
-    <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">...</div>
-    <div class="tab-pane fade" id="contact" role="tabpanel" aria-labelledby="contact-tab">...</div>
-  </div>
+</div>
+<div class="form-container" id="TempOverTime">
+        <div class="row">
+            <div class="col-md-8 offset-md-2">
+                <form action="/tempvstime/" method="post">
+                    <br>
+                    {# Django requires this token statement #}
+                    {% csrf_token %}
+
+                    {{ form }}
+
+                    <script type="text/javascript">
+                        $(function() {
+
+                            var start = moment().subtract(29, 'days');
+                            var end = moment();
+
+
+                            function cb(start, end) {
+                                $('#id_dateRange').html(start.format('MMMM D, YYYY') + ' - ' + end.format('MMMM D, YYYY'));
+                            }
+
+                            var disabledRanges = [];
+                            {% for range in outageList %}
+                                disabledRanges.push({ start: '{{ range.startDate }}', end: '{{ range.endDate }}' });
+                            {% endfor %}
+                            $('#id_dateRange').daterangepicker({
+
+                                isInvalidDate: function(date) {
+                                    for (var i = 0; i < disabledRanges.length; i++) {
+                                        if (date >= moment(disabledRanges[i].start) && date <= moment(disabledRanges[i].end)) {
+                                            return true;
+                                        }
+                                    }
+                                    return false;
+                                },
+                                minDate: "{{ dataStartDate }}",
+                                maxDate: "{{ dataEndDate }}",
+                                ranges: {
+                                'Last 7 Available Days': [moment("{{ dataEndDate }}").subtract(6, 'days'), moment()],
+                                'Last 30 Available Days': [moment("{{ dataEndDate }}").subtract(29, 'days'), moment()],
+                                'Last 3 Available Months': [moment("{{ dataEndDate }}").subtract(3, 'months'), moment()],
+                                'Last Available Year': [moment("{{ dataEndDate }}").subtract(1, 'years'), moment()]
+                                },
+
+                            }, cb);
+
+                            cb(start, end);
+
+                        });
+                    </script>
+
+                    <div>
+                        <input type="submit" value="Submit" />
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
